# vrend

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/assets/shaders/: static.frag  static.vert
app/src/: app.cpp  app.h  appinfo.h  log.h  main.cpp  uuid.cpp  uuid.h
app/src/data/: asset_manager.cpp  asset_manager.h  image.cpp  image.h  mesh.h  model.cpp  model.h  model_source.h  scene.cpp  scene.h  texture.cpp  texture.h
app/src/graphics/: descriptor.cpp  descriptor.h  descriptors.cpp  descriptors.h  device.cpp  device.h  extensions.cpp  extensions.h  image.cpp  image.h  material.cpp  material.h  memory.cpp  memory.h  pipeline.cpp  pipeline.h  render_pass.cpp  render_pass.h  renderer.cpp  renderer.h  swap_chain.cpp  swap_chain.h  texture.cpp  texture.h  texture_buffer.h  ui.cpp  ui.h  uniform.cpp  uniform.h  validation.cpp  validation.h
app/src/tools/: constant_translator.cpp  constant_translator.h  convert_model.cpp  convert_model.h  convert_vector.cpp  convert_vector.h
libs/: CMakeLists.txt
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: vulkan.h
libs/glad/src/: vulkan.c
